# node-zip-rs

./: .gitignore  Cargo.toml  README.md  biome.json  index.d.ts  index.js  package.json  tsconfig.json
.github/workflows/: ci.yml
benchmarks/: archive.bench.ts
src/: archive.rs  error.rs  lib.rs  write.rs
tests/: archive.spec.ts  env.ts  write.spec.ts
