[package]
edition = "2021"
name = "node-zip-rs"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "=3.8.3", default-features = false, features = ["napi4"] }
napi-derive = "=3.5.2"
zip = "=8.1.0"
thiserror = "2"
walkdir = "2.5.0"

[build-dependencies]
napi-build = "=2.3.1"

[profile.release]
lto = true
strip = "symbols"
